tests/fixtures/invalid/oct_no_args.py
# oct() requires at least 1 argument
x = oct()
